Fix: stack over flow error resolved